// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba bv bw bx by bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Large
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bz b5 c0 b7 b8 b9 ba c1 c2 c3 c4 bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Larger
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Button Variant 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Default
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bk bl bm bn bo"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Primary
    </button>
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Secondary
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Poster 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 ce cf cc cg cd ch"
        src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
      />
      <div
        className="ci cj ck cl"
      >
        <h1
          className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
        >
          July 26
        </h1>
        <div
          className="cz bf b3 bt d0 c0"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Card Thumbnail 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
      data-baseweb="card"
      onClick={[Function]}
    >
      <img
        className="b9 b7 ce cf cc d1 cd d2"
        src="https://image.tmdb.org/t/p/w300/aQLygZOIKai6aaiBAeeKpIWO5nc.jpg"
      />
      <div
        className="ci cj ck cl"
      >
        <div
          className="cz bf b3 bt d0 c0"
        >
          <div
            className="cz d3 b3 bt d0 c0"
          >
            <div
              className="co cl"
              data-baseweb="block"
            >
              Once Upon a Time in Hollywood
            </div>
            <div
              className=""
              data-baseweb="block"
            >
              <svg
                className="d4 d5 d6 d7 d8"
                data-baseweb="icon"
                viewBox="0 0 20 20"
              >
                <title>
                  Show
                </title>
                <path
                  d="M.2 10a11 11 0 0119.6 0A11 11 0 01.2 10zm9.8 4a4 4 0 100-8 4 4 0 000 8zm0-2a2 2 0 110-4 2 2 0 010 4z"
                />
              </svg>
               7.5k
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Credit Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Joaquin Phoenix"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp ci"
      >
        <div
          className="co b3 d0 bz dq"
          data-baseweb="typo-paragraphlarge"
        >
          Joaquin Phoenix
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Arthur Fleck / Joker
        </div>
      </div>
    </div>
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Robert De Niro"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp ci"
      >
        <div
          className="co b3 d0 bz dq"
          data-baseweb="typo-paragraphlarge"
        >
          Robert De Niro
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Murray Franklin
        </div>
      </div>
    </div>
    <div
      className="d9 da cq cs db"
    >
      <div
        className="dc dd de"
      >
        <div
          aria-label={null}
          className="df dg dh di dj d4"
          data-baseweb="avatar"
          role={null}
        >
          <img
            alt="Zazie Beetz"
            className="df dg dh di dj dk dl dm dn"
            onError={[Function]}
            src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
          />
        </div>
      </div>
      <div
        className="do dd dp ci"
      >
        <div
          className="co b3 d0 bz dq"
          data-baseweb="typo-paragraphlarge"
        >
          Zazie Beetz
        </div>
        <div
          className="d3 b3 b5 b4 b6"
          data-baseweb="typo-labelsmall"
        >
          Sophie Dumond
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Deck Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="dr ds dt"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <ul
        className="du dv dw dr dx db dy dz e0 e1 e2"
      >
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
        <li
          className="e3 dj"
        >
          <div
            className="ah ai aj c5 c6 c7 c8 c9 ca b9 b7 ba b8 cb av cc cd"
            data-baseweb="card"
            onClick={[Function]}
          >
            <img
              className="b9 b7 ce cf cc cg cd ch"
              src="https://image.tmdb.org/t/p/w500/8j58iEBw9pOXFD2L0nt0ZXeHviB.jpg"
            />
            <div
              className="ci cj ck cl"
            >
              <h1
                className="b3 cm b5 cn co az b0 b1 cp cq cr cs ct cu cv cw cx cy"
              >
                July 26
              </h1>
              <div
                className="cz bf b3 bt d0 c0"
              />
            </div>
          </div>
        </li>
      </ul>
      <button
        className="e4 e5 e6 av e7 e8 e9 ea bz eb ec ed ee ef"
        onClick={[Function]}
      >
        &lt;
      </button>
      <button
        className="e4 e5 e6 av e7 e8 e9 ea bz eb ec ed ee eg"
        onClick={[Function]}
      >
        &gt;
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Layout Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="eh ei ej ek el"
    >
      <p
        className="b3 bt d0 c0 em en eo ep eq"
      >
        Inside content
      </p>
      <div
        className="db er dr eh es et"
      >
        <div
          className="do eu ev"
        >
          <h2
            className="b3 ew b5 dq ex ey cp en ez f0 f1 f2 f3"
          >
            Section 1
          </h2>
        </div>
        <div
          className="f4 eu f5"
        >
          <div
            className="f6"
          >
            <p
              className="b3 bt d0 c0 em en eo ep eq"
            >
              Inside section 1
            </p>
          </div>
        </div>
      </div>
      <div
        className="db er dr eh es et"
      >
        <div
          className="do eu ev"
        >
          <h2
            className="b3 ew b5 dq ex ey cp en ez f0 f1 f2 f3"
          >
            Section 2
          </h2>
        </div>
        <div
          className="f4 eu f5"
        >
          <div
            className="f6"
          >
            <p
              className="b3 bt d0 c0 em en eo ep eq"
            >
              Inside section 2
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Modal Size 1`] = `
Array [
  <div
    className=""
  >
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open default modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open full modal
    </button>
    <br />
    <br />
    <button
      className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bp bq br bs"
      data-baseweb="button"
      disabled={false}
      onClick={[Function]}
    >
      Open auto modal
    </button>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PaginatedItems Base 1`] = `
Array [
  <div
    className=""
  >
    <div>
      <div
        className="f7 f8 f9 bg fa fb fc fd db er dx dy cj"
      >
        <div
          className="dr fe ff fg"
          role="rowgroup"
        >
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fg cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Joaquin Phoenix"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/zixTWuMZ1D8EopgOhLVZ6Js2ux3.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp ci"
                >
                  <div
                    className="co b3 d0 bz dq"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Joaquin Phoenix
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Arthur Fleck / Joker
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fg cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Robert De Niro"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/8Bgdfv1oN9Mw0YuMHP6fw8KzDkc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp ci"
                >
                  <div
                    className="co b3 d0 bz dq"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Robert De Niro
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Murray Franklin
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="db af"
            role="row"
          >
            <div
              className="b3 b4 d0 bu bf db fg cr cs ct cq"
            >
              <div
                className="d9 da cq cs db"
              >
                <div
                  className="dc dd de"
                >
                  <div
                    aria-label={null}
                    className="df dg dh di dj d4"
                    data-baseweb="avatar"
                    role={null}
                  >
                    <img
                      alt="Zazie Beetz"
                      className="df dg dh di dj dk dl dm dn"
                      onError={[Function]}
                      src="https://image.tmdb.org/t/p/w185/sgxzT54GnvgeMnOZgpQQx9csAdd.jpg"
                    />
                  </div>
                </div>
                <div
                  className="do dd dp ci"
                >
                  <div
                    className="co b3 d0 bz dq"
                    data-baseweb="typo-paragraphlarge"
                  >
                    Zazie Beetz
                  </div>
                  <div
                    className="d3 b3 b5 b4 b6"
                    data-baseweb="typo-labelsmall"
                  >
                    Sophie Dumond
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c1 c2 db"
    >
      <div
        aria-label="pagination"
        className="db af bf b3 bt b5 bu"
        data-baseweb="pagination"
      >
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fh ay az b0 b1 b2 b3 bt fi bu b7 b8 b9 ba bv bw bx by d3 bg fj fk fl fm fn fo"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &lt;
        </button>
        <div
          className="dt ci fp fq"
        >
          <div
            aria-controls={null}
            aria-expanded="false"
            aria-haspopup="true"
            className="b3 bt d0 c0 dj dt dr"
            data-baseweb="select"
            onClick={[Function]}
          >
            <div
              className="b9 b7 b8 ba dj ds dr db fr av fs f8 ft at au bf fu bg fv"
              onClick={[Function]}
              onKeyDown={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
            >
              <div
                className="dj dt do eu fw db af fx ds bb bc fy cs"
              >
                <div
                  aria-selected="true"
                  className="bu dj fz dx cf ds g0 g1 g2 dt cr ct g3 be bf b3 bt b5"
                  disabled={false}
                  value={1}
                >
                  1
                </div>
                <div
                  aria-disabled={false}
                  aria-expanded={false}
                  aria-label={null}
                  aria-labelledby={null}
                  aria-required={null}
                  className="dt d4 cf bg e8 fv dj aq b0 b2 az b1 cr ct cq cs g4 g5"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  tabIndex={0}
                />
              </div>
              <div
                className="dj dt db dd af g6 be"
              >
                <svg
                  className="d4 g7 bf g4 g8 av"
                  data-baseweb="icon"
                  viewBox="0 0 24 24"
                >
                  <title>
                    open
                  </title>
                  <path
                    d="M12.7071 15.2929L17.1464 10.8536C17.4614 10.5386 17.2383 10 16.7929 10L7.20711 10C6.76165 10 6.53857 10.5386 6.85355 10.8536L11.2929 15.2929C11.6834 15.6834 12.3166 15.6834 12.7071 15.2929Z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-label="page 1 of 2"
          className="g9 ck bg d3"
        >
          of 2
        </span>
        <button
          className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw fh ay az b0 b1 b2 b3 bt fi bu b7 b8 b9 ba bv bw bx by d3 bg fj fk fl fm fn fo"
          data-baseweb="button"
          disabled={false}
          onClick={[Function]}
        >
          &gt;
        </button>
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots PopoverMenu Base 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="db ga gb"
      data-baseweb="block"
    >
      <button
        aria-controls={null}
        aria-expanded="false"
        aria-haspopup="true"
        className="dk af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba cr ct bd cs co bg fj fl fn gc"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          className="d4 g7 gd gc ge"
          data-baseweb="icon"
          viewBox="0 0 24 24"
        >
          <title>
            Menu
          </title>
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="11"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="5"
          />
          <rect
            height="2"
            rx="1"
            width="16"
            x="4"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots ReviewItem Review Item 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="gf gg d9 c2 cq cs"
    >
      <div
        className="d3 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        Gimly
      </div>
      <p
        className="b3 bt d0 c0 em en eo ep eq"
      >
        I'm not here to explain 
        <em>
          Once Upon a Time In Hollywood
        </em>
        , just to enjoy it. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cr ct cq cs d3 bg fj gh fl gi fn gj"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
    <div
      className="gk gl d9 c2 cq cs"
    >
      <div
        className="d3 b3 b5 b4 b6"
        data-baseweb="typo-labelsmall"
      >
        JPV852
      </div>
      <p
        className="b3 bt d0 c0 em en eo ep eq"
      >
        Well, the last 15-minutes were great, the first 2.5 hours on the other hand was... uneventful. I have an interest in Hollywood, more from the 1980s though, so some of the slower scenes still kept my attention, but there's no real plot and minimal character development. 
      </p>
      <button
        className="ae af ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 bt b5 bu b7 b8 b9 ba cr ct cq cs d3 bg fj gh fl gi fn gj"
        data-baseweb="button"
        disabled={false}
        onClick={[Function]}
      >
        Read more
      </button>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Search Size 1`] = `
Array [
  <div
    className=""
  >
    <div
      className="b3 b4 d0 bu bf db dr"
      data-baseweb="input"
    >
      <div
        className="dj db dr fs f8 gm at au b9 ba b7 b8 b3 b4 d0 bu bf gn bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g7 gd go gp"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gq gr aq dr cf gs gt d9 da fy gu b3 b4 d0 bu bf gv gw"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Default"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bt d0 c0 bf db dr"
      data-baseweb="input"
    >
      <div
        className="dj db dr fs f8 gm at au b9 ba b7 b8 b3 bt d0 c0 bf gn bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g7 gd go gp"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gq gr aq dr cf gs gt bb bc gx gy b3 bt d0 c0 bf gv gw"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Medium"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
    <br />
    <div
      className="b3 bz d0 dq bf db dr"
      data-baseweb="input"
    >
      <div
        className="dj db dr fs f8 gm at au b9 ba b7 b8 b3 bz d0 dq bf gn bp"
        data-baseweb="base-input"
      >
        <div
          className="db af bd"
        >
          <svg
            className="d4 g7 gd go gp"
            data-baseweb="icon"
            viewBox="0 0 24 24"
          >
            <title>
              Search
            </title>
            <path
              clipRule="evenodd"
              d="M11 6C8.79086 6 7 7.79086 7 10C7 12.2091 8.79086 14 11 14C13.2091 14 15 12.2091 15 10C15 7.79086 13.2091 6 11 6ZM5 10C5 6.68629 7.68629 4 11 4C14.3137 4 17 6.68629 17 10C17 11.2958 16.5892 12.4957 15.8907 13.4765L19.7071 17.2929C20.0976 17.6834 20.0976 18.3166 19.7071 18.7071C19.3166 19.0976 18.6834 19.0976 18.2929 18.7071L14.4765 14.8907C13.4957 15.5892 12.2958 16 11 16C7.68629 16 5 13.3137 5 10Z"
              fillRule="evenodd"
            />
          </svg>
        </div>
        <input
          aria-describedby={null}
          aria-invalid={false}
          aria-label={null}
          aria-labelledby={null}
          aria-required={false}
          autoComplete="on"
          className="dj bg gq gr aq dr cf gs gt bv bw gz h0 b3 bz d0 dq bf gv gw"
          disabled={false}
          inputMode="text"
          name=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onKeyUp={[Function]}
          pattern={null}
          placeholder="Large"
          required={false}
          rows={null}
          type="text"
        />
      </div>
    </div>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Tag Base 1`] = `
Array [
  <div
    className=""
  >
    <span
      aria-label="button"
      className="b3 h1 b5 b6 af h2 f8 gq h3 h4 h5 h6 dj em h7 ae g4 fr h8 h9 ha hb hc hd bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="ds g1 g0 he"
        title="Action"
      >
        Action
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h1 b5 b6 af h2 f8 gq h3 h4 h5 h6 dj em h7 ae g4 fr h8 h9 ha hb hc hd bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="ds g1 g0 he"
        title="Thriller"
      >
        Thriller
      </span>
    </span>
    <span
      aria-label="button"
      className="b3 h1 b5 b6 af h2 f8 gq h3 h4 h5 h6 dj em h7 ae g4 fr h8 h9 ha hb hc hd bd be aq  "
      data-baseweb="tag"
      onClick={null}
      onKeyDown={[Function]}
      role="button"
      tabIndex={null}
    >
      <span
        className="ds g1 g0 he"
        title="Drama"
      >
        Drama
      </span>
    </span>
  </div>,
  <div
    className=""
  />,
]
`;

exports[`Storyshots Typography Size 1`] = `
Array [
  <div
    className=""
  >
    <h2
      className="b3 ew b5 dq ex ey cp en ez f0 f1 f2 f3"
    >
      H2: Overview
    </h2>
    <h3
      className="b3 ew fi dq hf hg"
    >
      H3: Popular movies
    </h3>
    <p
      className="b3 bt d0 c0 em en eo ep eq"
    >
      P1: As the gang return to Jumanji to rescue one of their own, they discover that nothing is as they expect. The players will have to brave parts unknown and unexplored in order to escape the world’s most dangerous game.
    </p>
  </div>,
  <div
    className=""
  />,
]
`;
